--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <title>Qartutv</title>
-  </head>
-  <body>
-    <h2>Hello</h2>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>QartuTv</title>
+</head>
+<body>
+        <iframe width="400px" height="300px" title="Seria 1" src="https://vkvideo.ru/video824626030_456239020?t=2m11s&t=2m14s" allowfullscreen allow="accelerometer; clipboard-write">
+
+        </iframe>
+</body>
 </html>
