--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>QartuTv</title>
 </head>
 <body>
-        <iframe width="400px" height="300px" title="Seria 1" src="https://vkvideo.ru/video824626030_456239020?t=2m11s&t=2m14s" allowfullscreen allow="accelerometer; clipboard-write">
+        <iframe width="400px" height="300px" title="Seria 1" src="https://www.youtube.com/watch?v=7TwQNBzO4No" allowfullscreen allow="accelerometer; clipboard-write">
 
         </iframe>
 </body>
