--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>QartuTv</title>
 </head>
 <body>
-        <iframe width="400px" height="300px" title="Seria 1" src="https://www.youtube.com/watch?v=7TwQNBzO4No" allowfullscreen allow="accelerometer; clipboard-write">
-
-        </iframe>
+        <iframe src="https://vk.com/video_ext.php?oid=824626030&id=456239020&hd=3&autoplay=1" width="1280" height="720" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
