--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QartuTv</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <iframe src="https://vk.com/video_ext.php?oid=824626030&id=456239020&hd=3&autoplay=1" width="1280" height="720" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+    <div class="main">
+        <a href="index.html" id="name"><h2>QartuTv</h2></a>
+    </div>
+    <div class="section1">
+        <div class="series">
+            <label for="series">
+            <select>
+                <option value="1">1</option>
+            </select>
+        </div>
+        <h2>სერიალები</h2>
+        <a href="gaddar.html"><img src="https://uyure.net/img/2204.webp" id="gaddar"></a>
+    </div>
 </body>
 </html>
