--- a/gaddar.html
+++ b/gaddar.html
@@ -11,13 +11,16 @@
     <div class="main">
         <a href="index.html" id="name"><h2>QartuTv</h2></a>
     </div>
-    <h2 id="name">დაუნდობელი/Gaddar</h2>
+    <div class="sname">
+        <h2 id="namet">დაუნდობელი/Gaddar</h2>
+        <img src="https://uyure.net/img/2204.webp" width="270px" height="370px" id="img">
+    </div>
     <div class="vid">
         <img src="https://uyure.net/img/2204.webp" width="270px" height="370px">
+        <iframe src="https://vkvideo.ru/video_ext.php?oid=824626030&id=456239020&hd=2&autoplay=1" width="960" height="560" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
         <select>
             <option value="1" href="gaddar.html" >სერია 1</option>
         </select>
-        <iframe src="https://vk.com/video_ext.php?oid=824626030&id=456239020&hd=3&autoplay=1" width="960" height="560" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
     </div>
 </body>
 </html>
