--- a/gaddar.html
+++ b/gaddar.html
@@ -13,7 +13,12 @@
     </div>
     <div class="sname">
         <h2 id="namet">დაუნდობელი/Gaddar</h2>
-        <img src="https://uyure.net/img/2204.webp" width="270px" height="370px" id="img">
+        <div class="mobdiv">
+            <img src="https://uyure.net/img/2204.webp" width="270px" height="370px" id="img">
+            <select id="mobsel">
+                <option value="1" href="gaddar.html" >სერია 1</option>
+            </select>
+        </div>
     </div>
     <div class="vid">
         <img src="https://uyure.net/img/2204.webp" width="270px" height="370px">
