--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="section1">
         <h2>სერიალები</h2>
         <a href="gaddar.html"><img src="https://uyure.net/img/2204.webp" id="gaddar"></a>
+        <a href="deha.html"><img src="https://uyure.net/img/2079.webp" id="dehat"></a>
     </div>
 </body>
 </html>
