--- a/deha.html
+++ b/deha.html
@@ -22,7 +22,7 @@
     </div>
     <div class="vid">
         <img src="https://uyure.net/img/2079.webp" width="270px" height="370px">
-        <iframe src="https://vkvideo.ru/video_ext.php?oid=824626030&id=456239029&hd=2&autoplay=1" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://vkvideo.ru/video_ext.php?oid=824626030&id=456239029&hd=2&autoplay=1" width="853" height="480" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
         <select>
             <option value="1" href="deha.html" >სერია 1</option>
         </select>
