--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
         <a href="gaddar.html"><img src="https://uyure.net/img/2204.webp" id="gaddar"></a>
         <a href="deha.html"><img src="https://uyure.net/img/2079.webp" id="dehat"></a>
     </div>
+    <div class="section2">
+        <h2>ანიმეები</h2>
+        <a href="nrt.html"><img src="https://uyure.net/img/214.webp" id="Naruto"></a>    
+    </div>
 </body>
 </html>
