--- a/nrt.html
+++ b/nrt.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QartuTv</title>
-    <link rel="stylesheet" href="deha.css">
+    <link rel="stylesheet" href="nrt.css">
 </head>
 <body>
     <div class="main">
         <a href="index.html" id="name"><h2>QartuTv</h2></a>
     </div>
     <div class="sname">
-        <h2 id="namet">გენიოსი/DEHA</h2>
+        <h2 id="namet">ნარუტო/NARUTO</h2>
         <div class="mobdiv">
-            <img src="https://uyure.net/img/2079.webp" width="270px" height="370px" id="img">
+            <img src="https://uyure.net/img/214.webp" width="270px" height="370px" id="img">
             <select id="mobsel">
                 <option value="1" href="gaddar.html" >სერია 1</option>
             </select>
         </div>
     </div>
     <div class="vid">
-        <img src="https://uyure.net/img/2079.webp" width="270px" height="370px">
-        <iframe src="https://vkvideo.ru/video_ext.php?oid=824626030&id=456239029&hd=2&autoplay=1" width="960" height="540" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+        <img src="https://uyure.net/img/214.webp" width="270px" height="370px">
+        <iframe width="960" height="540" src="//embed.myvideo.ge/flv_player/embed.php?video_id=3951058" frameborder="0" allowfullscreen="true"></iframe>
         <select>
             <option value="1" href="deha.html" >სერია 1</option>
         </select>
