--- a/gaddar.html
+++ b/gaddar.html
@@ -22,10 +22,11 @@
     </div>
     <div class="vid">
         <img src="https://uyure.net/img/2204.webp" width="270px" height="370px">
-        <iframe src="https://vkvideo.ru/video_ext.php?oid=824626030&id=456239020&hd=2&autoplay=1" width="960" height="560" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
-        <select>
-            <option value="1" href="gaddar.html" >სერია 1</option>
+        <iframe id="iframedisplay"src="https://vkvideo.ru/video_ext.php?oid=824626030&id=456239020&hd=2&autoplay=1" width="960" height="540" allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+        <select id="seriesSelector">
+            <option value="1">სერია 1</option>
         </select>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
