--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="section2">
         <h2>ანიმეები</h2>
-        <a href="nrt.html"><img src="https://adjaranets.to/uploads/posts/2024-05/medium/htp1dtlgfamjfu8wqjnuqdp1n4i.jpg"></a>    
+        <a href="nrt.html"><img src="https://adjaranets.to/uploads/posts/2024-05/medium/htp1dtlgfamjfu8wqjnuqdp1n4i.jpg" id="ali"></a>    
     </div>
 </body>
 </html>
