--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QartuTv</title>
     <link rel="stylesheet" href="style.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9345691273796531"
-     crossorigin="anonymous"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9345691273796531"
-     crossorigin="anonymous"></script>
-    
 </head>
 <body>
     <div class="main">
@@ -23,7 +18,7 @@
     </div>
     <div class="section2">
         <h2>ანიმეები</h2>
-        <a href="nrt.html"><img src="https://adjaranets.to/uploads/posts/2024-05/medium/htp1dtlgfamjfu8wqjnuqdp1n4i.jpg" id="ali"></a>    
+        <a href="aot.html"><img src="https://adjaranets.to/uploads/posts/2024-05/medium/htp1dtlgfamjfu8wqjnuqdp1n4i.jpg" id="aot"></a>    
     </div>
 </body>
 </html>
