--- a/aot.html
+++ b/aot.html
@@ -22,7 +22,7 @@
     </div>
     <div class="vid">
         <img src="https://adjaranets.to/uploads/posts/2024-05/medium/htp1dtlgfamjfu8wqjnuqdp1n4i.jpg" width="270px" height="370px">
-        <iframe width="960" height="540" src="https://secvideo1.online/embed/444643/?redirect_from=stormo.online" frameborder="0" allowfullscreen="true"></iframe>
+        <iframe width="960" height="540" src="https://adjaraneti.xyz/v/t6hqro9e76z2" frameborder="0" allowfullscreen="true"></iframe>
         <select>
             <option value="1" href="deha.html" >სერია 1</option>
         </select>
