--- a/deha.html
+++ b/deha.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QartuTv</title>
     <link rel="stylesheet" href="deha.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9345691273796531"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="main">
