--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ka">
 <head>
+    <link rel="icon" type="image/png" href="https://i.imgur.com/Nu7VZRE.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>QartuTv – სერიალები და ანიმეები</title>
@@ -52,6 +53,13 @@
             <span class="card-lang">DUB</span>
             <img src="https://adjaranets.to/uploads/posts/2024-05/medium/htp1dtlgfamjfu8wqjnuqdp1n4i.jpg" alt="Attack on Titan" />
             <span class="card-title">Attack on Titan</span>
+        </a>
+        <a href="ao.html" class="card" data-title="all out">
+            <span class="card-year">2016</span>
+            <span class="card-count">1 / 25</span> 
+            <span class="card-lang">DUB</span>
+            <img src="https://otaku.ge/uploads/posts/2025-06/bx21349-j2c50kipf5rv.png" alt="All Out" />
+            <span class="card-title">All Out</span>
         </a>
       </div>
     </section>
