--- a/ao.html
+++ b/ao.html
@@ -32,14 +32,18 @@
     <div class="episode-player">
       <div class="player-wrapper">
         <iframe
-          src="https://filemoon.to/e/haffk9k3ozyc/All_Out!!_Ep__1.mp4"
-          allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
-          frameborder="0"
-          allowfullscreen
-        ></iframe>
+             id="iframedisplay"
+             width="560"
+             height="315"
+             src="https://filemoon.to/e/haffk9k3ozyc/All_Out!!_Ep__1.mp4"
+             frameborder="0"
+             allowfullscreen
+            ></iframe>
 
         <select class="episode-select overlay" id="seriesSelector">
           <option value="1" selected>სერია 1</option>
+          <option value="2">სერია 2</option>
+          <option value="3">სერია 3</option>
           <!-- Add more episodes as needed -->
         </select>
       </div>
@@ -51,5 +55,6 @@
     <p>&copy; 2025 QartuTv. ყველა უფლება დაცულია.</p>
     <p><a href="index.html">მთავარი გვერდი</a></p>
   </footer>
+  <script src="ao.js"></script>
 </body>
 </html>
