--- a/aot.html
+++ b/aot.html
@@ -32,14 +32,21 @@
     <div class="episode-player">
       <div class="player-wrapper">
         <iframe
-          src="https://adjaraneti.xyz/v/t6hqro9e76z2"
-          allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
-          frameborder="0"
-          allowfullscreen
-        ></iframe>
+             id="iframedisplay"
+             width="560"
+             height="315"
+             src="https://mykadricdn.online/v/tqe3y32l94aw"
+             frameborder="0"
+             allowfullscreen
+            ></iframe>
 
         <select class="episode-select overlay" id="seriesSelector">
           <option value="1" selected>სერია 1</option>
+          <option value="2">სერია 2</option>
+          <option value="3">სერია 3</option>
+          <option value="4">სერია 4</option>
+          <option value="5">სერია 5</option>
+          <option value="6">სერია 6</option>
           <!-- Add more episodes as needed -->
         </select>
       </div>
@@ -51,5 +58,6 @@
     <p>&copy; 2025 QartuTv. ყველა უფლება დაცულია.</p>
     <p><a href="index.html">მთავარი გვერდი</a></p>
   </footer>
+  <script src="aot.js"></script>
 </body>
 </html>
