--- a/aot.html
+++ b/aot.html
@@ -32,23 +32,32 @@
     <div class="episode-player">
       <div class="player-wrapper">
         <iframe
-             id="iframedisplay"
-             width="560"
-             height="315"
-             src="https://mykadricdn.online/v/tqe3y32l94aw"
-             frameborder="0"
-             allowfullscreen
-            ></iframe>
-
-        <select class="episode-select overlay" id="seriesSelector">
-          <option value="1" selected>სერია 1</option>
-          <option value="2">სერია 2</option>
-          <option value="3">სერია 3</option>
-          <option value="4">სერია 4</option>
-          <option value="5">სერია 5</option>
-          <option value="6">სერია 6</option>
-          <!-- Add more episodes as needed -->
-        </select>
+          id="iframedisplay"
+          width="560"
+          height="315"
+          src="https://mykadricdn.online/v/tqe3y32l94aw"
+          frameborder="0"
+          allowfullscreen
+        ></iframe>
+      
+        <div class="custom-dropdowns">
+          <!-- Season Selector -->
+          <div class="custom-dropdown overlay" id="seasonDropdown">
+            <button class="dropdown-button" id="seasonToggle">აირჩიე სეზონი</button>
+            <ul class="dropdown-list" id="seasonList">
+              <li data-season="1">სეზონი 1</li>
+              <li data-season="2">სეზონი 2</li>
+            </ul>
+          </div>
+        
+          <!-- Episode Selector -->
+          <div class="custom-dropdown overlay" id="episodeDropdown">
+            <button class="dropdown-button" id="episodeToggle">აირჩიე სერია</button>
+            <ul class="dropdown-list" id="episodeList">
+              <!-- Episodes will be injected here dynamically -->
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </section>
