--- a/gaddar.html
+++ b/gaddar.html
@@ -32,13 +32,13 @@
     <div class="episode-player">
         <div class="player-wrapper">
           <iframe id="iframedisplay"
-            src="https://vkvideo.ru/video_ext.php?oid=824626030&id=456239020&hd=2&autoplay=1"
+            src="https://vkvideo.ru/video_ext.php?oid=824626030&id=456239031&hd=2&autoplay=1"
             allow="encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;"
             frameborder="0" allowfullscreen>
           </iframe>
       
           <select class="episode-select overlay" id="seriesSelector">
-            <option value="1" selected>სერია 1</option>
+            <option value="1" selected>თრეილერი</option>
             <!-- Add more episodes if needed -->
           </select>
         </div>
