--- a/ao.html
+++ b/ao.html
@@ -40,12 +40,23 @@
              allowfullscreen
             ></iframe>
 
-        <select class="episode-select overlay" id="seriesSelector">
-          <option value="1" selected>სერია 1</option>
-          <option value="2">სერია 2</option>
-          <option value="3">სერია 3</option>
-          <!-- Add more episodes as needed -->
-        </select>
+            <div class="custom-dropdowns">
+              <!-- Season Selector -->
+              <div class="custom-dropdown overlay" id="seasonDropdown">
+                <button class="dropdown-button" id="seasonToggle">აირჩიე სეზონი</button>
+                <ul class="dropdown-list" id="seasonList">
+                  <li data-season="1">სეზონი 1</li>
+                </ul>
+              </div>
+            
+              <!-- Episode Selector -->
+              <div class="custom-dropdown overlay" id="episodeDropdown">
+                <button class="dropdown-button" id="episodeToggle">აირჩიე სერია</button>
+                <ul class="dropdown-list" id="episodeList">
+                  <!-- Episodes will be injected here dynamically -->
+                </ul>
+              </div>
+            </div>
       </div>
     </div>
   </section>
