--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div class="card-grid" id="seriesGrid">
       <a href="gaddar.html" class="card" data-title="gaddar">
         <span class="card-year">2024</span>
-        <span class="card-count">1 / 80</span> 
-        <span class="card-lang">SUB</span>
+        <span class="card-count">1 / 20</span> 
+        <span class="card-lang">TRA</span>
         <img src="https://uyure.net/img/2204.webp" alt="Gaddar სერიალი" />
         <span class="card-title">Gaddar</span>
       </a>
@@ -56,7 +56,7 @@
         </a>
         <a href="ao.html" class="card" data-title="all out">
             <span class="card-year">2016</span>
-            <span class="card-count">3 / 25</span> 
+            <span class="card-count">9 / 25</span> 
             <span class="card-lang">DUB</span>
             <img src="https://otaku.ge/uploads/posts/2025-06/bx21349-j2c50kipf5rv.png" alt="All Out" />
             <span class="card-title">All Out</span>
@@ -68,6 +68,7 @@
   <footer class="footer">
     <div class="container">
       <p>&copy; 2025 QartuTv. ყველა უფლება დაცულია.</p>
+      <a href="https://www.facebook.com/profile.php?id=61578551435104"><p>Facebook</p></a>
     </div>
   </footer>
   <script>
