--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
             <img src="https://otaku.ge/uploads/posts/2025-06/bx21349-j2c50kipf5rv.png" alt="All Out" />
             <span class="card-title">All Out</span>
         </a>
+        <a href="ac.html" class="card" data-title="alien collections">
+          <span class="card-year">2025</span>
+          <span class="card-count">1 / 3</span> 
+          <span class="card-lang">TRA</span>
+          <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/0e4b00b4300eb844d66aa71d2df08b0e.jpg" alt="All Out" />
+          <span class="card-title">Alien collections</span>
+      </a>
       </div>
     </section>
   </main>
