--- a/ac.html
+++ b/ac.html
@@ -18,7 +18,7 @@
   <section class="episode-container">
     <!-- Left Side: Poster + Info -->
     <div class="episode-info">
-      <h1 class="episode-title">მთლიანად გარეთ! / All Out!</h1>
+      <h1 class="episode-title">უცხოპლანეტელის კოლექციები / Alien Collections</h1>
       <div class="poster-box">
         <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/0e4b00b4300eb844d66aa71d2df08b0e.jpg" alt="AOT Poster" />
         <div class="episode-meta">
