--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <footer class="footer">
     <div class="container">
       <p>&copy; 2025 QartuTv. ყველა უფლება დაცულია.</p>
-      <a href="https://www.facebook.com/profile.php?id=61578551435104"><p>Facebook</p></a>
+      <a href="https://www.facebook.com/profile.php?id=61578551435104" class="facebook-link">Facebook</a>
     </div>
   </footer>
   <script>
