--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ka">
 <head>
-    <link rel="icon" type="image/png" href="https://i.imgur.com/Nu7VZRE.png">
+    <link rel="icon" type="image/png" href="https://scontent.ftbs10-1.fna.fbcdn.net/v/t39.30808-6/521287338_1064272102574622_3351504683309822627_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=7DqvmLoiEzcQ7kNvwF34SMl&_nc_oc=AdmuqaPClFudth2Fs4DwHQ6f1aMNGLlk_zBEmVByB5VArEgKU50cBbdIYK5P0H9Jc7I&_nc_zt=23&_nc_ht=scontent.ftbs10-1.fna&_nc_gid=M-Tq4acxUl9xZ6MGEzKaNA&oh=00_AfTx9f-0VXxegqGNjsh-gBRv1tXAq9t1qZJcsRN4qTFBaw&oe=6886A58C">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>QartuTv – სერიალები და ანიმეები</title>
