--- a/ao.html
+++ b/ao.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>QartuTv | All Out!</title>
-  <link rel="stylesheet" href="aot.css" />
+  <link rel="stylesheet" href="ao.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9345691273796531"
     crossorigin="anonymous"></script>
 </head>
@@ -65,6 +65,7 @@
   <footer class="footer">
     <p>&copy; 2025 QartuTv. ყველა უფლება დაცულია.</p>
     <p><a href="index.html">მთავარი გვერდი</a></p>
+    <a href="https://www.facebook.com/profile.php?id=61578551435104" class="facebook-link">Facebook</a>
   </footer>
   <script src="ao.js"></script>
 </body>
