--- a/deha.html
+++ b/deha.html
@@ -49,6 +49,7 @@
   <footer class="footer">
     <p>&copy; 2025 QartuTv. ყველა უფლება დაცულია.</p>
     <p><a href="index.html">მთავარი გვერდი</a></p>
+    <a href="https://www.facebook.com/profile.php?id=61578551435104" class="facebook-link">Facebook</a>
   </footer>
 </body>
 </html>
