--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="card-grid" id="seriesGrid">
       <a href="gaddar.html" class="card" data-title="gaddar">
         <span class="card-year">2024</span>
-        <span class="card-count">1 / 20</span> 
+        <span class="card-count">0 / ??</span> 
         <span class="card-lang">TRA</span>
         <img src="https://uyure.net/img/2204.webp" alt="Gaddar სერიალი" />
         <span class="card-title">Gaddar</span>
@@ -63,7 +63,7 @@
         </a>
         <a href="ac.html" class="card" data-title="alien collections">
           <span class="card-year">2025</span>
-          <span class="card-count">1 / 3</span> 
+          <span class="card-count">0 / 3</span> 
           <span class="card-lang">TRA</span>
           <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/0e4b00b4300eb844d66aa71d2df08b0e.jpg" alt="All Out" />
           <span class="card-title">Alien collections</span>
