--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="card-grid" id="seriesGrid">
       <a href="gaddar.html" class="card" data-title="gaddar">
         <span class="card-year">2024</span>
-        <span class="card-count">0 / ??</span> 
+        <span class="card-count"> / ??</span> 
         <span class="card-lang">TRA</span>
         <img src="https://uyure.net/img/2204.webp" alt="Gaddar სერიალი" />
         <span class="card-title">Gaddar</span>
@@ -49,7 +49,7 @@
       <div class="card-grid">
         <a href="aot.html" class="card" data-title="attack on titan aot">
             <span class="card-year">2013</span>
-            <span class="card-count">13 / 94</span> 
+            <span class="card-count">46 / 94</span> 
             <span class="card-lang">DUB</span>
             <img src="https://adjaranets.to/uploads/posts/2024-05/medium/htp1dtlgfamjfu8wqjnuqdp1n4i.jpg" alt="Attack on Titan" />
             <span class="card-title">Attack on Titan</span>
