--- a/gaddar.html
+++ b/gaddar.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ka">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7XWH3TW06G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7XWH3TW06G');
+</script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>QartuTv | Gaddar</title>
