--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
         <img src="https://uyure.net/img/2079.webp" alt="Deha სერიალი" />
         <span class="card-title">Deha</span>
       </a>
+      <a href="the100.html" class="card" data-title="deha">
+        <span class="card-year">2014</span>
+        <span class="card-count">13 / 124</span> 
+        <span class="card-lang">DUB</span>
+        <img src="https://adjaranets.to/uploads/posts/2022-09/aseuli-qartulad.jpg" alt="THE 100 სერიალი" />
+        <span class="card-title">The 100</span>
+      </a>
     </div>
   </section>
 
