--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
       </a>
       <a href="deha.html" class="card" data-title="deha">
         <span class="card-year">2024</span>
-        <span class="card-count">3 / 124</span> 
+        <span class="card-count">7 / 124</span> 
         <span class="card-lang">DUB</span>
         <img src="https://uyure.net/img/2079.webp" alt="Deha სერიალი" />
         <span class="card-title">Deha</span>
       </a>
-      <a href="the100.html" class="card" data-title="deha">
+      <a href="the100.html" class="card" data-title="the100">
         <span class="card-year">2014</span>
-        <span class="card-count">13 / 124</span> 
+        <span class="card-count">13 / 100</span> 
         <span class="card-lang">DUB</span>
         <img src="https://adjaranets.to/uploads/posts/2022-09/aseuli-qartulad.jpg" alt="THE 100 სერიალი" />
         <span class="card-title">The 100</span>
@@ -65,7 +65,7 @@
       <div class="card-grid">
         <a href="aot.html" class="card" data-title="attack on titan aot">
             <span class="card-year">2013</span>
-            <span class="card-count">46 / 94</span> 
+            <span class="card-count">59 / 94</span> 
             <span class="card-lang">DUB</span>
             <img src="https://adjaranets.to/uploads/posts/2024-05/medium/htp1dtlgfamjfu8wqjnuqdp1n4i.jpg" alt="Attack on Titan" />
             <span class="card-title">Attack on Titan</span>
