--- a/index.html
+++ b/index.html
@@ -83,7 +83,14 @@
           <span class="card-lang">TRA</span>
           <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/0e4b00b4300eb844d66aa71d2df08b0e.jpg" alt="All Out" />
           <span class="card-title">Alien collections</span>
-      </a>
+        </a>
+        <a href="ds.html" class="card" data-title="Demon slayer">
+          <span class="card-year">2019</span>
+          <span class="card-count">44 / 63</span> 
+          <span class="card-lang">DUB</span>
+          <img src="https://img.mykadri.click/uploads/posts/2024-11/medium/xufrzu2mi8jh6szqejgp6tjbuyj.jpg" alt="All Out" />
+          <span class="card-title">Demon slayer</span>
+        </a>
       </div>
     </section>
   </main>
