--- a/ds.html
+++ b/ds.html
@@ -56,6 +56,7 @@
                 <ul class="dropdown-list" id="seasonList">
                   <li data-season="1">სეზონი 1</li>
                   <li data-season="2">სეზონი 2</li>
+                  <li data-season="3">სეზონი 3</li>
                 </ul>
               </div>
             
