--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
         <img src="https://adjaranets.to/uploads/posts/2022-09/aseuli-qartulad.jpg" alt="THE 100 სერიალი" />
         <span class="card-title">The 100</span>
       </a>
+      <a href="Sg.html" class="card" data-title="squidgame">
+        <span class="card-year">2021</span>
+        <span class="card-count">9 / 22</span> 
+        <span class="card-lang">DUB</span>
+        <img src="https://adjaranets.to/uploads/posts/2024-10/kalmaris-tamashi-sezoni-2-qartulad.webp" alt="Squid game სერიალი" />
+        <span class="card-title">Squid game</span>
+      </a>
     </div>
   </section>
 
