--- a/sg.html
+++ b/sg.html
@@ -55,6 +55,8 @@
                 <button class="dropdown-button" id="seasonToggle">აირჩიე სეზონი</button>
                 <ul class="dropdown-list" id="seasonList">
                   <li data-season="1">სეზონი 1</li>
+                  <li data-season="2">სეზონი 2</li>
+                  <li data-season="3">სეზონი 3</li>
                 </ul>
               </div>
             
