--- a/index.html
+++ b/index.html
@@ -95,8 +95,15 @@
         <span class="card-year">2019</span>
         <span class="card-count">63 / 63</span> 
         <span class="card-lang">DUB</span>
-        <img src="https://img.mykadri.click/uploads/posts/2024-11/medium/xufrzu2mi8jh6szqejgp6tjbuyj.jpg" alt="All Out" />
+        <img src="https://img.mykadri.click/uploads/posts/2024-11/medium/xufrzu2mi8jh6szqejgp6tjbuyj.jpg" alt="Demon slayer" />
         <span class="card-title">Demon slayer</span>
+      </a>
+      <a href="cm.html" class="card" data-title="Chainsaw man">
+        <span class="card-year">2022</span>
+        <span class="card-count">12 / 12</span> 
+        <span class="card-lang">DUB</span>
+        <img src="https://adjaranets.to/uploads/posts/2024-04/medium/s0bn0z75qlmjbzisvjc962pctdz.jpg" alt="Chainsaw man" />
+        <span class="card-title">Chainsaw man</span>
       </a>
       </div>
     </section>
