--- a/all.html
+++ b/all.html
@@ -106,6 +106,13 @@
         <img src="https://img.mykadri.click/uploads/posts/2025-04/medium/qgrk7r1fv4ijuoeigs5hohxndlj.jpg" alt="Weathering with you" />
         <span class="card-title">Weathering with you</span>
       </a>
+      <a href="barangay.html" class="card" data-title="Barangay 143">
+        <span class="card-year">2018</span>
+        <span class="card-count">1 / 26</span> 
+        <span class="card-lang">SUB</span>
+        <img src="https://m.media-amazon.com/images/M/MV5BOGE2NGY1ZTctODM0Ny00MjM3LWFkZjItOTZlMzE1ZTIzNjI2XkEyXkFqcGc@._V1_QL75_UY266_CR4,0,180,266_.jpg" alt="Barangay 143" />
+        <span class="card-title">Barangay 143</span>
+    </a>
       </div>
     </section>
   </main>
