--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
   <section class="section" id="anime">
     <h2 class="section-title">🎥 ანიმეები</h2>
     <div class="card-grid">
-      <a href="aot.html" class="card" data-title="attack on titan aot">
-          <span class="card-year">2013</span>
-          <span class="card-count">59 / 94</span> 
-          <span class="card-lang">DUB</span>
-          <img src="https://adjaranets.to/uploads/posts/2024-05/medium/htp1dtlgfamjfu8wqjnuqdp1n4i.jpg" alt="Attack on Titan" />
-          <span class="card-title">Attack on Titan</span>
+      <a href="barangay.html" class="card" data-title="Barangay 143">
+          <span class="card-year">2018</span>
+          <span class="card-count">1 / 26</span> 
+          <span class="card-lang">SUB</span>
+          <img src="https://m.media-amazon.com/images/M/MV5BOGE2NGY1ZTctODM0Ny00MjM3LWFkZjItOTZlMzE1ZTIzNjI2XkEyXkFqcGc@._V1_QL75_UY266_CR4,0,180,266_.jpg" alt="Barangay 143" />
+          <span class="card-title">Barangay 143</span>
       </a>
       <a href="ao.html" class="card" data-title="all out">
           <span class="card-year">2016</span>
